게시판 및 header 권한 수정

--- a/2. 개발/FreSearch/src/main/webapp/resources/css/style.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/style.css
@@ -589,7 +589,7 @@ body {
 .container>.fixed_box>.header>.upper>.login>.dropdown {
 	position: relative;
 	display: inline-block;
-	left: 88%;
+	left: 968px;
 }
 
 .container>.fixed_box>.header>.upper>.login>.dropdown>.dropdown-content {
