--- a/2. 개발/FreSearch/src/main/webapp/resources/css/info_find.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/info_find.css
@@ -386,6 +386,20 @@ body {
     text-align: center;
     cursor: pointer;
 }
+.modal .modal-content .modal-confirm{
+	background-color: #1428a0;
+    line-height: 34px;
+    display: inline-block;
+    cursor: pointer;
+    height: 36px;
+    padding: 0px 28px;
+    border-radius: 4px;
+}
+.modal .modal-content .modal-confirm span {
+	font-size: 14px;
+    color: #fff;
+    font-weight: bold;
+}
 
 /* .modal .modal-content .modal-content-detail {
 	position: relative;
