설문 목록 css 수정

--- a/2. 개발/FreSearch/src/main/webapp/resources/css/research_list.css
+++ b/2. 개발/FreSearch/src/main/webapp/resources/css/research_list.css
@@ -126,7 +126,7 @@ body {
     background: #fff;
     padding: 5px;
     margin-right: -6px;
-    width: 409px;
+    width: 49%;
     border: 1px solid #ddd;
     cursor: pointer;
     outline: none;
